--- a/test/fixtures/garages.yml
+++ b/test/fixtures/garages.yml
@@ -1,6 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  name: MyString
   dimension: MyString
   observation: MyString
   address: MyString
@@ -13,6 +14,7 @@ one:
   district_id: 
 
 two:
+  name: MyString
   dimension: MyString
   observation: MyString
   address: MyString
